# luminasync-v2

./: .dockerignore  .gitignore  .pylintrc  .sesskey  Dockerfile  README.md  light_control.db  pyproject.toml  requirements.txt  sass_compile.py
.github/workflows/: build-and-push-docker-image.yml
public/: manifest.json  manifest.webmanifest  service-worker.js
public/css/: main.css
public/js/: main.js
sass/: main.scss
src/: logging_config.py  main.py  update_presets.py
src/db/: models.py  session.py
src/interfaces/: newsdata_interface.py  openai_interface.py  tapo_lamp_interface.py  weather_api_interface.py
src/prompts/: analyze_weather_news.py  create_presets.py
src/services/: lamp_service.py  preset_service.py
src/utils/: color_translate.py
tests/interfaces/: test_tapo_lamp_interface.py  test_weather_api_interface.py
